# Epitech-Project-RType

./: CMakeLists.txt  RFC RTYPE.odt  conanfile.txt  configDoxygenForServer  help.sh
client/: define.hpp  player.json
client/include/: eventHandler.hpp  myJson.hpp  network.hpp  utility.hpp  verbose.hpp  window.hpp
client/include/clientErrors/: errInexistantEntityType.hpp  errInexistantFile.hpp  errJsonData.hpp  errWindowNotInitialized.hpp
client/include/database/: userDatabase.hpp
client/include/ecs/: Acomponent.hpp  clock.hpp  compoFactory.hpp  component.hpp  engine.hpp  entity.hpp  entityHandler.hpp
client/include/network/: SfmlUDP.hpp  message.hpp  messageFactory.hpp  processor.hpp
client/include/scene/: sceneHandler.hpp
client/rsrc/: window.json
client/rsrc/entities/: banana.json  pie.json  space.json
client/rsrc/join/: textInput.json
client/rsrc/menu/: join.json  space.json  start.json  text.json
client/rsrc/name/: start.json  text.json  textInput.json
client/rsrc/salon/: ready.json  textInput.json
client/src/: eventHandler.cpp  json.cpp  main.cpp  window.cpp
client/src/database/: userDatabase.cpp
client/src/ecs/: clock.cpp  compoFactory.cpp  engine.cpp  entity.cpp  entityHandler.cpp
client/src/ecs/components/: RCollider.cpp  RDrawable.cpp  RHoldData.cpp  RMouseHandler.cpp  RMovable.cpp  RText.cpp  RTextInput.cpp
client/src/network/: SfmlUDP.cpp  messageFactory.cpp  messageFactoryTCP.cpp  processor.cpp
client/src/scene/: sceneHandler.cpp
doc/doxygen/client/: Doxyfile
doc/doxygen/server/: Doxyfile
doc/enities/: components.txt  entities.txt
errors/: error.hpp
server/: define.hpp
server/include/: constantsServer.hpp  idManager.hpp  verbose.hpp
server/include/clock/: clock.hpp  notifiableByClock.hpp
server/include/command/: command.hpp  commandFactory.hpp
server/include/command/generator/: generateResponses.hpp
server/include/data/: id.hpp  message.hpp
server/include/elems/: archetype.hpp  colBox.hpp  entity.hpp  pos.hpp  velocity.hpp
server/include/elems/positionModifier/: aPositionModifier.hpp  factoryPosModifier.hpp
server/include/errors/: errDBClosed.hpp  errDBClosingFailed.hpp  errDBQueryExecFailed.hpp  errUsage.hpp
server/include/server/: asioServer.hpp  server.hpp
server/src/: main.cpp  verbose.cpp
server/src/clock/: masterClock.cpp  masterClockSingleton.cpp
server/src/command/: command.cpp  commandFactory.cpp
server/src/server/: asioServer.cpp
(+37 files in other folders)
